--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
         <div class="col">
           <div class="image">
-            <img src="/images/mountain.jpg" alt="">
+            <img src="images/mountain.jpg" alt="">
           </div>
         </div>
       </div>
