--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
       <div class="port-content">
         <div class="card">
-          <img src="/images/portfolio-1.jpg" alt="">
+          <img src="images/portfolio-1.jpg" alt="">
           <div class="info">
             <h3>Project Here </h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita eaque quos recusandae culpa corrupti,
@@ -166,7 +166,7 @@
         </div>
 
         <div class="card">
-          <img src="/images/portfolio-2.jpg" alt="">
+          <img src="images/portfolio-2.jpg" alt="">
           <div class="info">
             <h3>Project Here </h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita eaque quos recusandae culpa corrupti,
@@ -175,7 +175,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/images/portfolio-3.jpg" alt="">
+          <img src="images/portfolio-3.jpg" alt="">
           <div class="info">
             <h3>Project Here </h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita eaque quos recusandae culpa corrupti,
