--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <p>Less is more work</p>
       <div class="about-content">
         <div class="image">
-          <img src="/images/about.jpg" alt="">
+          <img src="images/about.jpg" alt="">
         </div>
         <div class="text">
           <p>
